2001-11-28  Matt Wilson  <msw@redhat.com>

	* gtk/gtk.override (_wrap_gtk_window_set_geometry_hints): added
	min_aspect and max_aspect to the kwlist so that the kwlist length
	matches the number of arguments in the argparse format string.

	* codegen/h2def.py (define_func): someone was thinking that a
	re.split looked like string.split.  Also fix the argument munger
	that I broke the other day.

	* atk.override (_wrap_atk_relation_new): fixed the constructor so
	it actually works

	* gtk/Makefile.am ($(srcdir)/gtk.c): get the atk types

	* gtk/gtk.override: import atk.Object as PyAtkObject_Type

	* Makefile.am (EXTRA_DIST): added examples/atk/atk-demo.py

	* atk.defs (relation_new): mark as constructor of AtkRelation
	(atk_no_op_object_factory_new): mark as constructor of
	AtkNoOpObjectFactory

2001-11-27  Matt Wilson  <msw@redhat.com>

	* atk.defs, atk.override, atkmodule.c: added start of atk wrapper

	* gtk/Makefile.am (DISTCLEANFILES): remove generated files
	($(srcdir)/gtk.c): modify targets to output generated files in the
	builddir, not the srcdir.
	($(srcdir)/gdk.c): likewise.
	($(srcdir)/libglade.c): likewise.

	* codegen/h2def.py (define_func): add check to workaround broken
	string.replace semantics on python 1.5

	* codegen/codegen.py (write_enums): if the enum or flag doesn't
	have a GType, just add those enum values listed in the defs file
	by hand.

	* codegen/argtypes.py (ArgMatcher.register_enum): if defs file
	doesn't specify a GType for the enum, use G_TYPE_NONE.
	(ArgMatcher.register_flag): likewise.

	* gobjectmodule.c (pyg_enum_get_value): allow enums to pass
	G_TYPE_NONE in as the type, disabling the string to value
	conversion.
	(pyg_flags_get_value): likewise.
	(pyg_constant_strip_prefix): new function to combine common
	codepath.	
	(pyg_enum_add_constants): use pyg_constant_strip_prefix
	(pyg_flags_add_constants): likewise.
	(functions): make pyg_constant_strip_prefix available to users of
	pygobject
