@@ -1,5 +1,11 @@
 2001-11-28  Matt Wilson  <msw@redhat.com>
 
+	* gtk/Makefile.am: removed disthook, marked autogenerated .c files
+	as nodist sources.
+
+	* Makefile.am: likewise.  Use a suffix rule instead of a pattern
+	rule for wider make compatibility.
+
 	* gtk/gtk.override (_wrap_gtk_window_set_geometry_hints): added
 	min_aspect and max_aspect to the kwlist so that the kwlist length
 	matches the number of arguments in the argparse format string.
